<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/otp_parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:forceDarkAllowed="false"
    tools:context=".ui.dashboard.login.OtpVerificationFragment">


    <include
        android:id="@+id/include_header"
        layout="@layout/fragment_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_4sdp"
        android:background="@drawable/bg_drop_shadow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp">

            <TextView
                android:id="@+id/tv_label_enter_verfication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:fontFamily="@font/jost_medium"
                android:text="@string/enter_verification_code"
                android:textColor="#2E2E2E"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <TextView
                android:id="@+id/tv_label_verification_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/jost_medium"
                android:text="@string/enter_the_digit"
                android:textColor="#A7A7A7"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_enter_verfication"></TextView>


            <TextView
                android:id="@+id/change_mobile_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/jost_semibold"
                android:text="@string/change_mobile_number"
                android:textColor="#070707"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_label_verification_phone"></TextView>

            <TextView
                android:id="@+id/tv_label_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/jost_medium"
                android:text="@string/otp"
                android:textColor="#2E2E2E"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_verification_phone"></TextView>

            <LinearLayout
                android:id="@+id/ll_et_otp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_otp">


                <EditText
                    android:id="@+id/et_one"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_otp_box"
                    android:digits="0123456789"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp" />


                <EditText
                    android:id="@+id/et_two"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_otp_box"
                    android:digits="0123456789"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp" />

                <EditText
                    android:id="@+id/et_three"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_otp_box"
                    android:digits="0123456789"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp" />

                <EditText
                    android:id="@+id/et_four"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_otp_box"
                    android:digits="0123456789"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp" />


                <EditText
                    android:id="@+id/et_five"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_otp_box"
                    android:digits="0123456789"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp" />


                <EditText
                    android:id="@+id/et_six"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_otp_box"
                    android:digits="0123456789"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp" />
            </LinearLayout>

            <com.mukesh.mukeshotpview.mukeshOtpView.MukeshOtpView
                android:id="@+id/customOtpView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:inputType="number"
                android:itemBackground="@drawable/bg_rounded_city_dropdown"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:hideLineWhenFilled="false"
                app:itemCount="6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_et_otp"
                app:lineColor="@color/blue"
                app:state_filled="true"
                app:viewType="none" />

            <RelativeLayout
                android:id="@+id/rl_otp_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/customOtpView">


                <TextView
                    android:id="@+id/tv_invalid_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/jost_regular"
                    android:text="@string/invalid_otp"
                    android:textColor="#E5184E"
                    android:textSize="@dimen/_12sdp"></TextView>

                <TextView
                    android:id="@+id/tv_clear_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/jost_regular"
                    android:text="@string/clear_otp"
                    android:textColor="#E5184E"
                    android:textSize="@dimen/_12sdp"></TextView>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_label_resend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl_otp_error">


                <TextView
                    android:id="@+id/tv_not_receive_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/jost_medium"
                    android:text="@string/not_received_code"
                    android:textColor="#A7A7A7"
                    android:textSize="@dimen/_12sdp"></TextView>

                <TextView
                    android:id="@+id/tv_resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/tv_resend_value"
                    android:enabled="false"
                    android:fontFamily="@font/jost_semibold"
                    android:text="Resend "
                    android:textColor="#2E2E2E"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="visible"></TextView>

                <TextView
                    android:id="@+id/tv_resend_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/jost_semibold"
                    android:text="00:30"
                    android:textColor="#659AC9"
                    android:textSize="@dimen/_13sdp"
                    android:visibility="visible"></TextView>

            </RelativeLayout>

            <include
                android:id="@+id/btn_continue"
                layout="@layout/layout_submit_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@id/rl_label_resend">

            </include>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/madison"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>