<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_profile_parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/include_header"
            layout="@layout/fragment_header" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_4sdp"
            android:background="@drawable/bg_drop_shadow" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_20sdp">

                <TextView
                    android:id="@+id/tv_edit_label_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:fontFamily="@font/jost_medium"
                    android:text="@string/name"
                    android:textColor="#000000"
                    android:textSize="@dimen/_12sdp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <AutoCompleteTextView
                        android:id="@+id/tv_mr"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="2"
                        android:background="@drawable/et_rounded_box_grey"
                        android:drawableEnd="@drawable/ic_down_arrow"
                        android:inputType="text|textVisiblePassword|textNoSuggestions"
                        android:fontFamily="@font/jost_regular"
                        android:focusable="false"
                        android:gravity="left|center"
                        android:hint="Mr"
                        android:minHeight="@dimen/_45sdp"
                        android:paddingLeft="@dimen/_2sdp"
                        android:paddingTop="0dp"
                        android:paddingEnd="@dimen/_2sdp"
                        android:paddingBottom="0dp"
                        android:textColor="#000000"
                        android:textColorHint="#61000000"
                        android:textSize="@dimen/_14sdp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_edit_name"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_weight="2.8"
                        android:background="@drawable/et_rounded_box_grey"
                        android:ellipsize="end"
                        android:fontFamily="@font/jost_regular"
                        android:hint="Enter Name"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
                        android:inputType="text|textNoSuggestions|textVisiblePassword"
                        android:maxLines="1"
                        android:textColor="#000000"
                        android:textColorHint="#61000000"
                        android:textSize="@dimen/_15sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_edit_label_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/jost_medium"
                            android:text="@string/gender"
                            android:textColor="#000000"
                            android:textSize="@dimen/_12sdp" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_edit_gender"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:background="@drawable/et_rounded_box_grey"
                            android:enabled="false"
                            android:fontFamily="@font/jost_regular"
                            android:hint="Gender"
                            android:textColor="#000000"
                            android:textColorHint="#61000000"
                            android:textSize="@dimen/_15sdp" />
                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_edit_age"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/jost_medium"
                            android:text="@string/age"
                            android:textColor="#000000"
                            android:textSize="@dimen/_12sdp" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_edit_age"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:background="@drawable/et_rounded_box_grey"
                            android:digits="0123456789"
                            android:fontFamily="@font/jost_regular"
                            android:hint="Age"
                            android:inputType="phone"
                            android:maxLength="3"
                            android:textColor="#000000"
                            android:textColorHint="#61000000"
                            android:textSize="@dimen/_15sdp" />
                    </LinearLayout>
                </LinearLayout>


                <TextView
                    android:id="@+id/tv_edit_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:fontFamily="@font/jost_medium"
                    android:text="@string/email_id"
                    android:textColor="#000000"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/et_rounded_box_grey"
                    android:fontFamily="@font/jost_regular"
                    android:hint="Email"
                    android:inputType="text|textNoSuggestions"
                    android:maxLines="1"
                    android:textColor="#000000"
                    android:textColorHint="#61000000"
                    android:textSize="@dimen/_15sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <include
                        android:id="@+id/btn_cancel"
                        layout="@layout/layout_submit_button"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginStart="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:layout_weight="1" />

                    <include
                        android:id="@+id/btn_save"
                        layout="@layout/layout_submit_button"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/madison"
        android:visibility="gone" />
</RelativeLayout>